packages/build/tests/error/fixtures/cancel/plugin.js
'use strict'

module.exports = {
  onPreBuild({
    utils: {
      build: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
